--- a/templates/resume/base.html
+++ b/templates/resume/base.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Colorlib Templates">
-    <meta name="author" content="Colorlib">
-    <meta name="keywords" content="Colorlib Templates">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <meta name="keywords" content="">
     <title>
         {% block title %}{% endblock %}
     </title>
